--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
 	},
 	"require" : {
 		"php" : ">=5.3",
-		"contao/core" : ">=3.2,<4"
+		"contao/core-bundle":"~3.2 || ~4.2",
+		"contao-community-alliance/composer-plugin":"~2.4 || ~3.0"
 	},
 	"replace" : {
 		"backboneit/contao-opengraph" : "self.version",
